@@ -1,5 +1,11 @@
 2023-11-16 Philipp Klaus Krause <philipp@colecovision.eu>
 
+	* src/mcs51/gen.c,
+	  src/mcs51/gen.h:
+	  Provide mcs51IsParmInCall.
+
+2023-11-16 Philipp Klaus Krause <philipp@colecovision.eu>
+
 	* src/mcs51/gen.c:
 	  Replace further uses of fReturn by aopArg and aopRet.
 
